[Polyam] fix: Prevent content scrolling behind main menu (part 1)
Port c6dddbb66e5de5e0cd18eb0fe667c41aada764ba to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -79,6 +79,11 @@
   background: var(--background-color);
   backdrop-filter: var(--background-filter);
   border-top: 1px solid var(--background-border-color);
+  box-sizing: border-box;
+
+  .with-modals--active & {
+    padding-right: var(--root-scrollbar-width);
+  }
 
   .layout-multiple-columns & {
     display: none;
